[gd_scene load_steps=18 format=2]

[ext_resource path="res://Fonts/Magical Story.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GFX/Button/blue button press.png" type="Texture" id=2]
[ext_resource path="res://GFX/Button/blue button.png" type="Texture" id=3]
[ext_resource path="res://GFX/Button/black button.png" type="Texture" id=4]
[ext_resource path="res://GFX/Button/black button press.png" type="Texture" id=5]
[ext_resource path="res://GFX/Players/bunny1_stand.png" type="Texture" id=6]
[ext_resource path="res://GFX/Players/bunny1_jump.png" type="Texture" id=7]
[ext_resource path="res://SFX/ES_Bubble Blip 1 - SFX Producer.wav" type="AudioStream" id=8]
[ext_resource path="res://Scenes/Levels/coin.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Levels/menu level.gd" type="Script" id=10]
[ext_resource path="res://SFX/Chiptune_Adventures_1.ogg" type="AudioStream" id=11]
[ext_resource path="res://GFX/Button/red button.png" type="Texture" id=12]
[ext_resource path="res://GFX/Button/red button press.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 81
outline_size = 10
outline_color = Color( 0.32549, 0.447059, 0.819608, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 53
outline_size = 2
outline_color = Color( 0.0862745, 0.0509804, 0.0509804, 1 )
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 1 )

[node name="meu_level" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="BG" type="ColorRect" parent="."]
anchor_top = 0.00166667
anchor_right = 1.0
anchor_bottom = 1.00167
color = Color( 0.576471, 0.898039, 0.486275, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Hoppy_day" type="Label" parent="."]
anchor_left = -0.174805
anchor_top = -0.13
anchor_right = 0.546875
anchor_bottom = 0.356667
custom_fonts/font = SubResource( 1 )
text = "Hoppy Day"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Level1" type="TextureButton" parent="."]
anchor_left = 0.133789
anchor_top = 0.296667
anchor_right = 0.357422
anchor_bottom = 0.438333
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Level1"]
anchor_left = 0.0917031
anchor_top = 0.105882
anchor_right = 0.862038
anchor_bottom = 0.791929
custom_fonts/font = SubResource( 2 )
text = "level 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="level2" type="TextureButton" parent="."]
anchor_left = 0.131836
anchor_top = 0.495
anchor_right = 0.354492
anchor_bottom = 0.635
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="level2"]
anchor_left = 0.100478
anchor_top = 0.116279
anchor_right = 0.870813
anchor_bottom = 0.802326
custom_fonts/font = SubResource( 2 )
text = "level 2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="level3" type="TextureButton" parent="."]
anchor_left = 0.132813
anchor_top = 0.688333
anchor_right = 0.355469
anchor_bottom = 0.828333
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="level3"]
anchor_left = 0.100478
anchor_top = 0.116279
anchor_right = 0.870813
anchor_bottom = 0.802326
custom_fonts/font = SubResource( 2 )
text = "level 3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="level4" type="TextureButton" parent="."]
anchor_left = 0.419922
anchor_top = 0.388333
anchor_right = 0.642578
anchor_bottom = 0.528333
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="level4"]
anchor_left = 0.100478
anchor_top = 0.116279
anchor_right = 0.870813
anchor_bottom = 0.802326
custom_fonts/font = SubResource( 2 )
text = "level 4"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="level5" type="TextureButton" parent="."]
anchor_left = 0.420898
anchor_top = 0.593333
anchor_right = 0.643555
anchor_bottom = 0.733333
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="level5"]
anchor_left = 0.100478
anchor_top = 0.116279
anchor_right = 0.870813
anchor_bottom = 0.802326
custom_fonts/font = SubResource( 2 )
text = "level 5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="brown" type="AnimatedSprite" parent="."]
position = Vector2( 844, 440 )
frames = SubResource( 3 )
frame = 1
playing = true

[node name="coin1" parent="." instance=ExtResource( 9 )]
position = Vector2( 840, 223 )

[node name="Button" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -14.857

[node name="Music_menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -26.135
autoplay = true

[node name="back" type="TextureButton" parent="."]
anchor_left = 0.875977
anchor_top = 0.015
anchor_right = 0.991211
anchor_bottom = 0.138333
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="back"]
anchor_left = 0.169492
anchor_top = 0.135135
anchor_right = 0.889831
anchor_bottom = 0.824324
custom_fonts/font = SubResource( 4 )
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="level2" to="." method="_on_level2_pressed"]
[connection signal="pressed" from="level3" to="." method="_on_level3_pressed"]
[connection signal="pressed" from="level4" to="." method="_on_level4_pressed"]
[connection signal="pressed" from="level5" to="." method="_on_level5_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
